compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_holes2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1364
expression: "external fn main() -> List(_) = \"\" \"\""

---
error: Unexpected type hole
  ┌─ /src/one/two.gleam:1:28
  │
1 │ external fn main() -> List(_) = "" ""
  │                            ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.

